# ascabgym

./: README.md  pyproject.toml
ascab/: __init__.py  serrater.py  test.py  train.py
ascab/env/: env.py
ascab/model/: infection.py  maturation.py
ascab/utils/: generic.py  plot.py  weather.py
doc/images/: A-scab-flow-diagram.drawio
