[tool.poetry]
name = "ascab"
version = "0.1.0"
description = ""
authors = ["AscabGym <ascabgym@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
astral = "^3.2"
pandas = "^2.2.2"
datetime = "^5.5"
matplotlib = "^3.9.0"
scipy = "^1.13.0"
xlrd = "^2.0.1"
stable-baselines3 = {version = "^2.6.0", optional = true}
tensorboard = {version = "^2.19.0", optional = true}
sb3-contrib = {version = "^2.6.0", optional = true}

[tool.poetry.extras]
sb-integration = ["stable-baselines3", "tensorboard"]
full-sb-integration = ["stable-baselines3", "tensorboard", "sb3-contrib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
